# dict.py

./: .travis.yml  README.md  setup.cfg  setup.py
dict/: __init__.py
tests/dict/examples/dict.key/: dict(key="v")key
tests/examples/dict.key/: dict(key="v").not_existing
tests/examples/dict.remove(key)/: dict(key="v").remove("key")  dict(key="v").remove("key").remove("key2")  dict(key="v").remove(["key","key2"])
tests/examples/dict.update(**kwargs)/: dict(key="v").update(key="v2")  dict(key="v").update(key="v2").update(key="v3")
tests/examples/dict["key"]/: dict(key="v")["key"]  dict(key="v")["not-existing"]
